Fixed logo and search button on mobile

--- a/assets/styles/scss/_navbar.scss
+++ b/assets/styles/scss/_navbar.scss
@@ -49,6 +49,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          filter: brightness(25%);
 
           img {
             height: 85%;
@@ -934,6 +935,7 @@
 
           img {
             width: 100%;
+            filter: saturate(0);
           }
 
           &:hover,
